modules/security_group/main.tf
variable "vpc_id" {}
variable "allowed_ip" {}
resource "aws_security_group" "this" {
  name = "student-driver-app-sg"
  vpc_id = var.vpc_id
  ingress { from_port=22; to_port=22; protocol='tcp'; cidr_blocks=[var.allowed_ip] }
  ingress { from_port=80; to_port=80; protocol='tcp'; cidr_blocks=['0.0.0.0/0'] }
  ingress { from_port=443; to_port=443; protocol='tcp'; cidr_blocks=['0.0.0.0/0'] }
  egress { from_port=0; to_port=0; protocol='-1'; cidr_blocks=['0.0.0.0/0'] }
  tags = { Name = "student-driver-app-sg" }
}
